[package]
name = "ompas-rae-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
sompas-structs = {path = "../../scheme/structs"}
tokio = { version = "1.17.0", features = ["full", "time"] }
ompas-rae-structs = {path = "../structs"}
sompas-utils = {path= "../../scheme/utils" }
prost = { default-features = false, version = "0.11" }
tonic = "0.8"
async-stream = "0.3.3"
tokio-stream = { default-features = false, version = "0.1" }


[build-dependencies]
tonic-build = "0.8"
