[package]
name = "ompas-rae-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-utils = {path= "../../scheme/utils" }
tokio = { version = "1.5.0", features = ["full", "time"] }
log =  { version = "0.4", features = ["std"] }