[package]
name = "ompas-rae-scheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-utils = {path= "../../scheme/utils" }
sompas-structs = {path = "../../scheme/structs"}
sompas-modules = {path = "../../scheme/modules"}
sompas-core = {path = "../../scheme/core"}
sompas-language = {path = "../../scheme/language"}
sompas-macros = {path = "../../scheme/macros"}
ompas-rae-structs= {path = "../structs"}

ompas-rae-planning = {path ="../planning" }
ompas-rae-language = {path = "../language"}
ompas-rae-log = {path = "../log"}
ompas-rae-core = {path = "../core"}
tokio = { version = "1.17.0", features = ["full", "time"] }
im = "15.0.0"
chrono = "0.4.19"
log =  { version = "0.4", features = ["std"] }
macro_rules_attribute = "0.0.2"
async-trait = "0.1.51"
aries_planning = {path = "../../aries/planning"}
rand = "0.8.5"
itertools = "0.10.3"
futures = "0.3.17"
