[package]
name = "ompas-rae-structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sompas-utils = {path= "../../scheme/utils" }
sompas-structs = {path = "../../scheme/structs"}
sompas-core = {path = "../../scheme/core"}
sompas-language = {path = "../../scheme/language"}
sompas-modules = {path = "../../scheme/modules"}
ompas-rae-language= {path = "../language"}
aries_planning = {path= "../../aries/planning"}
tokio = { version = "1.17.0", features = ["full", "time"] }
log =  { version = "0.4.16", features = ["std"] }
im = "15.0.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
itertools = "0.10.3"
function_name = "0.2.0"