[package]
name = "ompas-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-structs = {path = "../../scheme/structs"}
sompas-core = {path = "../../scheme/core"}
sompas-repl = {path = "../../scheme/repl"}
sompas-utils={path = "../../scheme/utils"}
ompas-gobotsim = {path = "../../gobotsim"}
ompas-rae-scheme = {path = "../../rae/scheme"}
aries_utils = {path = "../../aries/utils"}


tokio = { version = "1.17.0", features = ["full", "time"] }
rustyline = "7.1.0"
