[package]
name = "ompas-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sompas-structs = {path = "../../scheme/structs"}
sompas-core = {path = "../../scheme/core"}
sompas-repl = {path = "../../scheme/repl"}
ompas-utils={path = "../../utils"}
ompas-gobotsim = {path = "../../ompas-gobot-sim"}
ompas-core = {path = "../../acting/core"}
aries = {path = "../../aries/solver"}
aries_planners = {path = "../../aries/planning/planners"}
aries_planning = {path = "../../aries/planning/planning"}

tokio = { workspace = true }
rustyline = { workspace = true }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"