[package]
name = "sompas-apps"
version = "0.1.0"
edition = "2021"
default-run = "scheme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "scheme"
path = "src/bin/scheme.rs"


[dependencies]
ompas-utils = {path = "../../utils" }
sompas-core = {path = "../core"}
sompas-structs = {path = "../structs"}
sompas-language = {path = "../language"}
sompas-repl = {path = "../repl"}
sompas-modules = {path = "../modules"}
ompas-middleware = {path = "../../middleware"}

im = {workspace = true}
structopt = {workspace = true}
tokio = {workspace = true}
chrono = {workspace = true}
